# curl-pretty

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: quality_checks.yml  release.yml
src/: curl_parser.rs  display.rs  help.rs  main.rs  version.rs  ws.rs  ws_client.rs
tests/: integration_tests.rs
