[package]
name = "curlp"
version = "1.0.0"
edition = "2021"

[dependencies]
serde_json = "1"
colored = "3.1"
atty = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

[profile.release]
opt-level = 3
strip = true
