[package]
name = "pcurl"
version = "1.3.9"
edition = "2021"

[dependencies]
serde_json = "1"
colored = "3.1"
atty = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
openssl = { version = "0.10", features = ["vendored"] }
ureq = "2.9"

[profile.release]
opt-level = 3
strip = true

[dev-dependencies]
cargo-husky = "1.5.0"

[package.metadata.cargo-husky]
pre-commit = ["cargo fmt -- --check", "cargo clippy -- -D warnings", "cargo test"]
post-checkout = []
post-commit = []
post-merge = []
pre-push = []
pre-rebase = []
# Disabled because it slows down the build
# pre-auto-gc = []
# Disabled because it requires user interaction
# prepare-commit-msg = []
# commit-msg = []
